sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: not found: value y
     while( ecart>1 || y!=0){
                       ^